# dds-ids

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxygen.cmake  Jenkinsfile  LICENSE.md  README.md  conanfile.py  config.h.cmake
SecurityClient/: CMakeLists.txt  Main.cpp  Main.hpp  README.md  main_function.cpp
SecurityClient/alert/: AlertResponseStage.cpp  AlertResponseStage.hpp  DdsDetectionReportSink.cpp  DdsDetectionReportSink.hpp  IAlertSink.hpp  IResponseHandler.hpp  NoopResponseHandler.cpp  NoopResponseHandler.hpp
SecurityClient/app/: SecurityClientApp.cpp  SecurityClientApp.hpp  StageRuntime.cpp  StageRuntime.hpp
SecurityClient/collection/: CollectionStage.cpp  CollectionStage.hpp  DdsCollector.cpp  DdsCollector.hpp  IDataCollector.hpp
SecurityClient/config/: SecurityClientConfig.hpp  SecurityClientConfigLoader.cpp  SecurityClientConfigLoader.hpp
SecurityClient/gtest/alert/: AlertResponseStage_test.cpp  DdsDetectionReportSink_test.cpp
SecurityClient/gtest/app/: SecurityClientApp_test.cpp  StageRuntime_test.cpp
SecurityClient/gtest/collection/: CollectionStage_test.cpp
SecurityClient/gtest/config/: SecurityClientConfigLoader_test.cpp
SecurityManager/: CMakeLists.txt  Main.cpp  Main.hpp  ManagerState.cpp  ManagerState.hpp  main_function.cpp
idl/: CMakeLists.txt  DoorSwitch.idl  DoorUnlockLockIndicator.idl  detectionReport.idl
idl/script/: add_idl_from_autoware.sh  msg_list.txt
policy_rule/: config_dds_v0.9.json  config_dds_v1.0.json
